--- a/linux-ref.css
+++ b/linux-ref.css
@@ -1,1 +1,69 @@
-O
+.center{
+  text-align:center;
+}
+.ce{
+  background-color: #D5D5D5;
+  padding: 16px 16px 16px;
+  margin: 20px 0;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  border-left: 4px solid #FF2D2D;
+  width: 40%;
+}
+.ti{
+  text-indent: 20px;
+}
+.tii{
+  text-indent:40px;
+}
+.example{
+    background-color: #D5D5D5;
+    padding: 16px 16px 16px;
+    margin: 20px 0;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    border-left: 4px solid #0790EC;
+    width: 40%;
+}
+.hff{
+  font-family: 'Spectral SC', serif;
+}
+
+.hf{
+  font-family: 'Lato';
+}
+.non{
+  border-left:0px;
+}
+body{
+  font-family: 'Philosopher';
+}
+table {
+    border-collapse: collapse;
+}
+table, th, td {
+    border: 1px solid #ddd;  
+    text-align: center;
+    padding:5px 5px;
+}
+th{
+  color: white;
+  font-size: 18px;
+  background-color: #FE3333;
+  padding: 5px 5px 5px;
+}
+td{
+  background-color: white;
+}
+div{
+  padding: 10px 10px 10px 10px;
+  border-left: 4px solid #4CAF50;
+  background-color: lightgray;
+  width: 41.5%;
+}
+.head{
+  border: 4px solid #FF6565;
+  padding:7px 7px;
+  color: white;
+  text-align: center;
+  background-color: #FF4545;
+  font-family: 'Spectral SC', serif;
+}
